# lung-segmentation-lidc-idri

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: lidc-idri-pylidc.ipynb  lidc-idri-segmentation.ipynb  lidc-idri-simpleitk.ipynb  lidc-idri.ipynb
src/: __init__.py  preprocess.py
src/models/: common.py  unet.py
src/pipelines/: train.py
tests/: test_models.py  test_preprocess.py
