[project]
name = "lung-segmentation-lidc-idri"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.34.4",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "pillow>=11.3.0",
    "pylidc>=0.2.3",
    "pylidc-updated>=0.2.3",
    "scikit-image>=0.25.2",
    "setuptools>=80.9.0",
    "simpleitk>=2.5.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "pyrefly>=0.30.0",
    "pytest>=8.4.1",
]

[tool.uv]
package = true

[project.scripts]
preprocess = "preprocess:main"
create_dataset = "preprocess:create_dataset"

[tool.pyrefly]
project-includes = ["**/*"]
project-excludes = ["**/node_modules", "**/__pycache__", "**/*venv/**/*"]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_file = "logs/pytest_run.log"
log_file_level = "INFO"
log_file_format = "%(asctime)s - %(name)s %(levelname)s %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
